Archive/ac796ce492ad93a103de23eda34b1d27-fd4873ff059bd6c64ff40fe784dcc49b/output
+ g++ -std=c++11 -O1 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:9:57: error: size of variable ‘data’ is too large
     std::array<int, std::numeric_limits<size_t>::max()> data;
                                                         ^
